--- a/style.css
+++ b/style.css
@@ -13,10 +13,14 @@ body, html {
 .left {
     width: 20%;
     padding: 16px;
+    background-color: #81D4FA;
 }
 .left h2 {
     font-family: 'Comfortaa', cursive;
-    font-size: 20px;
+    text-align: center;
+    color: #0277BD;
+    font-size: 16px;
+    margin: 0 0 32px 0;
 }
 
 
@@ -38,12 +42,14 @@ body, html {
 
 .day-row {
     width: 100%;
-    border-top: 1px dashed rgb(184, 184, 184);
+    border-top: 1px dotted #ECEFF1;
     border-bottom:none;
     font-family: 'Comfortaa', cursive;
 }
 .day-row .weekday {
-    width: 40px;
+    width: 28px;
+    opacity: 0.5;
+    font-size: 10px;
     height: 100%;
     padding-left: 4px;
     display: inline-flex;
@@ -51,30 +57,41 @@ body, html {
 
 }
 .day-row .day {
-    width: 40px;
+    width: 32px;
     height: 100%;
+    font-weight: bold;
     display: inline-flex;
     align-items: center;
+    justify-content: center;
+}
+.day-row .month {
+    width: 30px;
+    height: 100%;
+    font-size: 11px;
+    opacity: 0.3;
+    display: inline-flex;
+    align-items: center;
+    float: right;
 }
 .txt-m {
-    font-size: 13px;
+    font-size: 14px;
 }
 .txt-s {
-    font-size: 11px;
+    font-size: 12px;
 }
 
 .past-day {
-    opacity: 0.3;
+    opacity: 0.2;
 }
 
 .weekend {
-    background-color: rgb(248, 241, 231);
+    background-color: #F0F4C3;
 }
 
 .last-month-day {
     /*border-bottom-right-radius: 5px;*/
     /*border-bottom-left-radius: 5px;*/
-    border-bottom: 1px solid rgb(109, 109, 109);
+    border-bottom: 1px dashed #BDBDBD;
     /*margin-bottom: 8px;*/
 }
 
@@ -82,4 +99,23 @@ body, html {
     border-top: none;
     /*border-top-left-radius: 5px;*/
     /*border-top-right-radius: 5px;*/
+}
+
+
+#clock {
+    height: 70px;
+    width: 100%;
+    font-family: 'Comfortaa', cursive;
+    font-size: 60px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0 0 32px 0;
+    color: #263238;
+}
+#clock .seconds {
+    font-size: 24px;
+    padding-left: 8px;
+    color: #455A64
 }
