--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body, html {
 .left {
     width: 20%;
     padding: 16px;
-    background-color: #81D4FA;
+    background-color: #B2EBF2;
 }
 .left h2 {
     font-family: 'Comfortaa', cursive;
@@ -23,15 +23,28 @@ body, html {
     margin: 0 0 32px 0;
 }
 
-
+nav {
+    width: 4%;
+    padding: 0;
+    font-family: 'Comfortaa', cursive;
+    font-size: 40px;
+    color: #E0E0E0;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+}
+nav:hover {
+    cursor: pointer;
+    opacity: 1;
+}
 .middle {
-    width: 40%;
-    padding: 32px;
+    width: 36%;
+    padding: 32px 16px 32px 0;
 }
 .right {
-    width: 40%;
-    padding: 32px;
-    padding-left: 0;
+    width: 36%;
+    padding: 32px 0 32px 16px;
 } 
 /* Clear floats after the columns */
 .row:after {
@@ -65,12 +78,17 @@ body, html {
     justify-content: center;
 }
 .day-row .month {
-    width: 30px;
+    width: 115px;
     height: 100%;
-    font-size: 11px;
-    opacity: 0.3;
+    font-size: 14px;
+    opacity: 1;
+    padding-right: 4px;
+    color: #0D47A1;
+    font-weight: bold;
+    font-family: 'Comfortaa', cursive;
     display: inline-flex;
     align-items: center;
+    justify-content: flex-end;
     float: right;
 }
 .txt-m {
@@ -91,7 +109,7 @@ body, html {
 .last-month-day {
     /*border-bottom-right-radius: 5px;*/
     /*border-bottom-left-radius: 5px;*/
-    border-bottom: 1px dashed #BDBDBD;
+    border-bottom: 1px dashed #e7e7e7;
     /*margin-bottom: 8px;*/
 }
 
