--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body, html {
 }
 .left {
     width: 20%;
-    padding: 16px;
+    padding: 32px;
     background-color: #b2ebf27a;
 }
 
@@ -44,11 +44,11 @@ nav:hover {
 }
 .middle {
     width: 36%;
-    padding: 32px 16px 32px 0;
+    padding: 64px 24px 64px 0;
 }
 .right {
     width: 36%;
-    padding: 32px 0 32px 16px;
+    padding: 64px 0 64px 24px;
 } 
 /* Clear floats after the columns */
 .row:after {
@@ -61,22 +61,21 @@ nav:hover {
     width: 100%;
     border-top: 1px dotted #ECEFF1;
     border-bottom:none;
+    padding: 0 16px;
     font-family: 'Comfortaa', cursive;
-    border-radius: 8px;
 }
 .day-row .weekday {
-    width: 28px;
+    width: 10px;
     opacity: 0.5;
-    font-size: 10px;
+    font-size: 8px;
     height: 100%;
-    padding-left: 4px;
     display: inline-flex;
     align-items: center;
-
 }
 .day-row .day {
     width: 32px;
     height: 100%;
+    font-size: 13px;
     font-weight: bold;
     display: inline-flex;
     align-items: center;
@@ -90,7 +89,7 @@ nav:hover {
     padding-right: 4px;
     color: #0D47A1;
     font-weight: bold;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Merriweather', serif;
     display: inline-flex;
     align-items: center;
     justify-content: flex-end;
