--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,18 +11,19 @@
 body, html {
     padding: 0;
     margin: 0;
-    background: white;
+    background: rgb(248, 248, 242);
     background-image: var(--background-image);
     background-size: cover;
+    overflow: hidden;
 }
 .main {
-    padding: 5%;
+    padding: 0;
     position: absolute;
     width: 100%;
     height: 100%;
 }
 .new {
-    padding: 5%;
+    padding: 0;
     position: absolute;
     transform: translateX(100%);
     width: 100%;
@@ -30,10 +31,10 @@ body, html {
     opacity: 0;
 }
 .slide-in {
-    animation: slide-in 0.3s forwards;
+    animation: slide-in 0.4s forwards;
 }
 .slide-out {
-    animation: slide-out 0.3s forwards;
+    animation: slide-out 0.4s forwards;
 }
 
 @keyframes slide-in {
@@ -52,86 +53,7 @@ body, html {
 
 
 
-.column {
-    float: left;
-    /*padding: 10px;*/
-    height: 100vh; /* Should be removed. Only for demonstration */
-}
-.left {
-    width: 20%;
-    padding: 32px;
-    background-color: #b2ebf27a;
-}
 
-
-nav {
-    width: 4%;
-    padding: 0;
-    font-family: 'Comfortaa', cursive;
-    font-size: 40px;
-    color: #E0E0E0;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-}
-nav:hover {
-    cursor: pointer;
-    opacity: 1;
-}
-.middle {
-    width: 36%;
-    padding: 64px 24px 64px 0;
-}
-.right {
-    width: 36%;
-    padding: 64px 0 64px 24px;
-} 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.day-row {
-    width: 100%;
-    border-top: 1px dotted #ECEFF1;
-    border-bottom:none;
-    padding: 0 16px;
-    font-family: 'Comfortaa', cursive;
-}
-.day-row .weekday {
-    width: 10px;
-    opacity: 0.5;
-    font-size: 8px;
-    height: 100%;
-    display: inline-flex;
-    align-items: center;
-}
-.day-row .day {
-    width: 32px;
-    height: 100%;
-    font-size: 13px;
-    font-weight: bold;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-}
-.day-row .month {
-    width: 115px;
-    height: 100%;
-    font-size: 14px;
-    opacity: 1;
-    padding-right: 4px;
-    color: #0D47A1;
-    font-weight: bold;
-    font-family: 'Merriweather', serif;
-    display: inline-flex;
-    align-items: center;
-    justify-content: flex-end;
-    float: right;
-}
 .txt-m {
     font-size: 14px;
 }
@@ -139,26 +61,6 @@ nav:hover {
     font-size: 12px;
 }
 
-.past-day {
-    opacity: 0.1;
-}
-
-.weekend {
-    background-color: #F0F4C3;
-}
-
-.last-month-day {
-    /*border-bottom-right-radius: 5px;*/
-    /*border-bottom-left-radius: 5px;*/
-    border-bottom: 1px dashed #e7e7e7;
-    /*margin-bottom: 8px;*/
-}
-
-.first-month-day {
-    border-top: none;
-    /*border-top-left-radius: 5px;*/
-    /*border-top-right-radius: 5px;*/
-}
 
 /* ----- WIDGETS ---- */
 .widget {
