--- a/static/css/layouts.css
+++ b/static/css/layouts.css
@@ -2,6 +2,16 @@
 .l-welcome {
     padding: 5%;
 }
+.l-nextweeks {
+    position: relative;
+}
+.l-nextweeks header {
+    position: absolute;
+    top:0;
+    padding: 32px 5%;
+    font-size: 32px;
+    font-family: 'Comfortaa', cursive;
+}
 .l-nextweeks .column {
     float: left;
     /*padding: 10px;*/
@@ -9,15 +19,15 @@
 }
 .l-nextweeks .col1 {
     width: 30%;
-    padding: 64px 32px 64px 0;
+    padding: 94px 32px 64px 0;
 }
 .l-nextweeks .col2 {
     width: 30%;
-    padding: 64px 32px 64px 0;
+    padding: 94px 32px 64px 0;
 }
 .l-nextweeks .col3 {
     width: 30%;
-    padding: 64px 0 64px 0;
+    padding: 94px 0 64px 0;
 } 
 
 .l-nextweeks nav {
@@ -47,7 +57,7 @@
     width: 100%;
     border-top: 1px dotted #ECEFF1;
     border-bottom:none;
-    padding: 0 16px;
+    padding: 0 4px 0 8px;
     font-family: 'Comfortaa', cursive;
 }
 .l-nextweeks .day-row .weekday {
@@ -57,6 +67,8 @@
     height: 100%;
     display: inline-flex;
     align-items: center;
+    justify-content: center;
+    float: left;
 }
 .l-nextweeks .day-row .day {
     width: 32px;
@@ -66,11 +78,33 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    float: left;
+}
+.l-nextweeks .day-row:hover .day {
+    color: red;
+}
+.l-nextweeks .day-row .content {
+    height: 100%;
+    padding: 2px 0;
+    float: left;
+}
+.l-nextweeks .day-row .content .e {
+    cursor: pointer;
+    padding: 0 4px;
+    display: inline-flex;
+    align-items: center;
+    margin-right: 5px;
+    height: 100%;
+    font-size: 11px;
+    color: white;
+    background-color: rgb(34, 9, 94);
+    border-radius: 4px;
+    float: left;
 }
 .l-nextweeks .day-row .month {
     width: 80px;
     height: 100%;
-    font-size: 14px;
+    font-size: 10px;
     opacity: 1;
     color: #0D47A1;
     font-weight: bold;
