--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,7 +98,20 @@ footer #cont-space .space{
 
 
 
-
+.open-event {
+    width: 500px;
+    height: 300px;
+    padding: 32px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    margin-left:-250px;   /* negative half of width above */
+    margin-top:-150px;
+    z-index: 10;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px grey;
+}
 
 
 
