--- a/static/css/components.css
+++ b/static/css/components.css
@@ -7,7 +7,7 @@
     font-family: 'Comfortaa', cursive;
     text-align: center;
     display: block;
-    color: black;
+    color: var(--color-on-background);
     margin: auto;
     margin: 16px 0 8px 0;
     font-size: 18px;
@@ -17,7 +17,7 @@
     font-family: 'Comfortaa', cursive;
     text-align: center;
     font-size: 28px;
-    color: black;
+    color: var(--color-on-background);
     background: none;
     border: none;
     border-bottom: 1px solid grey;
@@ -40,19 +40,20 @@
     height: 80px;
     margin: 30px auto;
     width: 100%;
-    font-family: 'Comfortaa', cursive;
+    font-family: var(--font-main);
     font-size: 70px;
     text-shadow: rgb(218, 218, 218) 1px 1px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     padding: 0;
-    color: #263238;
+    color: var(--color-on-background);
 }
 .c-clock .seconds {
+    display: none;
     font-size: 24px;
     padding-left: 8px;
-    color: #455A64
+    color: var(--color-on-background)
 }
 
 /* Sunhours */
@@ -70,7 +71,8 @@
 .c-sunhours .hour {
     display: inline-block;
     position: absolute;
-    font-family: 'Comfortaa', cursive;
+    font-family: var(--font-main);
+    color: var(--color-on-background);
     font-size: 13px;
     text-align: center;
     float: left;
@@ -81,12 +83,12 @@
 .c-sunhours .hour .icon{
     margin-bottom: 4px;
     opacity: 0.6;
-    color: black;
+    color: var(--color-on-background);
 }
 
 .c-sunhours .nightbar {
     height: 25px;
-    background-color: #200c68;
+    background-color: var(--color-dark);
     width: 100%;
     position: relative;
     border-radius: 15px;
@@ -94,22 +96,28 @@
 }
 .c-sunhours .nowbar {
     height: 100%;
-    margin: auto;
-    top: 0%;
+    padding: 4px;
+    top: 0;
     display: inline-block;
     position: absolute;
     float: left;
     border-radius: 15px;
-    opacity: 0.3;
-    background-color: #ffffff;
     z-index: 2;
+}
+.c-sunhours .nowbar .fill {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    opacity: 0.2;
+    background-color: #ffffff;
+
 }
 .c-sunhours .daybar {
     height: 100%;
     display: inline-block;
     position: absolute;
     float: left;
-    background-color: #90CAF9;
+    background-color: var(--color-primary);
 }
 .c-sunhours .sunhours-container-lines {
     height: 10px;
@@ -123,8 +131,8 @@
     display: inline-block;
     position: absolute;
     float: left;
-    border-right: 1px #5c5c5c dotted;
-    border-left: 1px #5c5c5c dotted;
+    border-right: 1px var(--color-on-background) dotted;
+    border-left: 1px var(--color-on-background) dotted;
 }
 .c-sunhours .sunhours-container-lines .now-line {
     /*height: 50%;
@@ -155,11 +163,12 @@
     width: 16px;
     height: 16px;
     border-radius: 50%;
-    box-shadow: inset calc(var(--moon-i)*16px) 0 black;
+    box-shadow: inset calc(var(--moon-i)*16px) 0 var(--color-on-background);
 }
 .c-sunhours .info {
-    font-family: var(--font-main);
-    font-size: 13px;
+    font-family: var(--font-secondary);
+    color: var(--color-on-background);
+    font-size: 15px;
     text-align: center;
     padding: 16px 0;
 }
