--- a/static/css/layouts.css
+++ b/static/css/layouts.css
@@ -17,17 +17,19 @@
 }
 .l-nextweeks header .title {
     font-size: 26px;
+    color: var(--color-on-background);
 }
 .l-nextweeks header .next-holiday {
     position: relative;
-    font-size: 14px;
+    color: var(--color-on-background);
+    font-size: 16px;
 }
 .l-nextweeks header .next-holiday #next-holiday-days {
     font-size: 18px;
-    color: var(--color-2);
+    color: var(--color-primary);
 }
 .l-nextweeks header .title #dynamic-word {
-    color: var(--color-2);
+    color: var(--color-primary);
 }
 
 .l-nextweeks .column {
@@ -51,7 +53,7 @@
 .l-nextweeks nav {
     width: 5%;
     padding: 0;
-    font-family: 'Comfortaa', cursive;
+    font-family: var(--font-main);
     font-size: 40px;
     color: #E0E0E0;
     display: inline-flex;
@@ -73,13 +75,14 @@
 
 .l-nextweeks .day-row {
     width: 100%;
-    border-top: 1px dotted #ECEFF1;
+    border-top: 1px dotted var(--color-surface);
     border-bottom:none;
     padding: 0 4px 0 8px;
-    font-family: 'Comfortaa', cursive;
+    font-family: var(--font-main);
 }
 .l-nextweeks .day-row .weekday {
     width: 10px;
+    color: var(--color-on-background);
     opacity: 0.5;
     font-size: 8px;
     height: 100%;
@@ -93,6 +96,8 @@
     height: 100%;
     font-size: 13px;
     font-weight: bold;
+    color: var(--color-on-background);
+    opacity: 0.7;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -113,9 +118,10 @@
     align-items: center;
     margin-right: 5px;
     height: 100%;
-    font-size: 11px;
+    font-size: 10px;
     color: white;
-    background-color: rgb(34, 9, 94);
+    font-family: var(--font-secondary);
+    background-color: var(--color-secondary);
     border-radius: 4px;
     float: left;
 }
@@ -124,9 +130,9 @@
     height: 100%;
     font-size: 10px;
     opacity: 1;
-    color: #0D47A1;
+    color: var(--color-dark);
     font-weight: bold;
-    font-family: 'Comfortaa', cursive;
+    font-family: var(--font-main);
     display: inline-flex;
     align-items: center;
     justify-content: flex-end;
@@ -138,18 +144,19 @@
 }
 
 .l-nextweeks .holiday {
-    background-color: var(--color-2);
+    background-color: var(--color-surface);
 }
 
 .l-nextweeks .last-month-day {
     /*border-bottom-right-radius: 5px;*/
     /*border-bottom-left-radius: 5px;*/
-    border-bottom: 1px dashed #e7e7e7;
+    /*border-bottom: 1px dashed var(--color-on-background);*/
     /*margin-bottom: 8px;*/
 }
 
 .l-nextweeks .first-month-day {
     border-top: none;
+    background: linear-gradient(180deg, rgba(58, 58, 58, 0.2) 0%, rgba(255,255,255,0) 85%);
     /*border-top-left-radius: 5px;*/
     /*border-top-right-radius: 5px;*/
 }
