--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-/*:root {
+:root {
     --background-image: url('');
     --font-main: 'Ubuntu', sans-serif;
     --font-secondary:  'Open Sans', sans-serif;
@@ -7,8 +7,8 @@
     --color-secondary: #028090;
     --color-primary: #00A896;
     --color-light: #02C39A;
-    --color-surface: #e0e498;
-    --color-background: #F0F3BD;
+    --color-surface: #edf0be;
+    --color-background: #fafce0;
 
     --color-on-background: #000000;
     --color-on-surface: #2b2b2b;
@@ -16,7 +16,7 @@
     --color-on-secondary: #242424;
     --moon-i: 5;
 }
-*/
+/*
 :root {
     --background-image: url('');
     --font-main: 'Ubuntu', sans-serif;
@@ -35,7 +35,7 @@
     --color-on-secondary: #242424;
     --moon-i: 5;
 }
-
+*/
 * {
     box-sizing: border-box;
 }
@@ -45,6 +45,8 @@ body, html {
     background: var(--color-background);
     background-image: var(--background-image);
     background-size: cover;
+    background-position: center bottom;
+    background-attachment: fixed;
     overflow: hidden;
 }
 .main {
@@ -53,6 +55,34 @@ body, html {
     width: 100%;
     height: 100%;
 }
+
+.main-next {
+    padding: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: translateX(100%);
+    opacity: 0;
+}
+.main--slide-in {
+    animation: slide-in 0.4s forwards;
+}
+.main--slide-out {
+    animation: slide-out 0.4s forwards;
+}
+
+@keyframes slide-in {
+    100% { transform: translateX(0%); opacity: 1;}
+}
+    
+@keyframes slide-out {
+    0% { transform: translateX(0%); }
+    100% { transform: translateX(-100%); opacity: 0;}
+}
+
+
+
+
 footer {
     padding: 0;
     width: 100%;
@@ -61,13 +91,13 @@ footer {
     padding: 16px 0;
     text-align: center;
 }
-footer #cont-space{
+footer .container-space-bar{
     display: inline-block;
     font-family: var(--font-main);
     font-size: 12px;
     display: none;
 }
-footer #cont-space .space{
+footer .container-space-bar .container-space-bar__space-bar{
     text-transform: uppercase;
     opacity: 0;
     padding: 5px 8px;
@@ -90,7 +120,7 @@ footer #cont-space .space{
 }
 
 
-.cont-settings{
+.container-settings{
     position: absolute;
     opacity: 0.4;
     color: var(--color-on-background);
@@ -102,39 +132,14 @@ footer #cont-space .space{
     justify-content: center;
     align-items: center;
 }
-.new {
-    padding: 0;
+
+.modal-event {
     position: absolute;
-    transform: translateX(100%);
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-}
-.slide-in {
-    animation: slide-in 0.4s forwards;
-}
-.slide-out {
-    animation: slide-out 0.4s forwards;
-}
-
-@keyframes slide-in {
-    100% { transform: translateX(0%); opacity: 1;}
-}
-    
-@keyframes slide-out {
-    0% { transform: translateX(0%); }
-    100% { transform: translateX(-100%); opacity: 0;}
-}
-
-
-
-.open-event {
     width: 500px;
     height: 300px;
-    padding: 32px;
-    position: absolute;
     top:50%;
     left:50%;
+    padding: 32px;
     margin-left:-250px;   /* negative half of width above */
     margin-top:-150px;
     z-index: 10;
