--- a/static/css/components.css
+++ b/static/css/components.css
@@ -9,6 +9,7 @@
     text-align: center;
     display: block;
     color: var(--color-on-background);
+    text-shadow: var(--color-on-background-shadow) 1px 1px 6px;
     margin: auto;
     margin: 16px 0 8px 0;
     font-size: 24px;
@@ -21,7 +22,7 @@
     color: var(--color-on-background);
     background: none;
     border: none;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid var(--color-on-background);
     padding: 8px;
     height: 40px;
     width: 100%;
@@ -30,7 +31,7 @@
 }
 .c-name input[name="name"]:focus {
     border: none;
-    border-bottom: 1.2px solid rgb(83, 83, 83);
+    border-bottom: 1.2px solid var(--color-on-background);
     background: none;
     outline: none;  
 }
@@ -39,12 +40,12 @@
 
 .c-clock {
     /*height: 72px;*/
-    margin: 0 auto 50px auto;
+    margin: 0 auto 30px auto;
     width: 100%;
     font-family: var(--font-main);
-    font-weight: 500;
-    font-size: 78px;
-    text-shadow: rgb(218, 218, 218) 1px 1px;
+    font-weight: 400;
+    font-size: 90px;
+    text-shadow: var(--color-on-background-shadow) 1px 1px 4px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -62,7 +63,6 @@
 .c-sun-hours {
     width: 100%;
     max-width: 600px;
-    margin: auto;
 }
 .sun-hours__hours {
     width: 100%;
@@ -75,6 +75,8 @@
     position: absolute;
     font-family: var(--font-main);
     color: var(--color-on-background);
+    font-weight: 500;
+    text-shadow: var(--color-on-background-shadow) 1px 1px 4px;
     font-size: 13px;
     text-align: center;
     float: left;
@@ -86,32 +88,41 @@
     margin-bottom: 4px;
     opacity: 0.6;
     color: var(--color-on-background);
+    /* text-shadow: var(--color-on-background-shadow) 1px 1px 4px; */
 }
 
 .sun-hours__night-bar {
-    height: 25px;
+    height: 20px;
     background-color: var(--color-dark);
     width: 100%;
     position: relative;
-    border-radius: 15px;
+    border-radius: 10px;
     margin: auto;
 }
 .sun-hours__night-bar__now-bar {
+    
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    border-top: 1px solid var(--color-on-dark-light);
+    background: var(--color-on-dark-light);
+    transform: translateY(-50%);
+    /*
     height: 100%;
-    padding: 4px;
+    padding: 5% 0;
     top: 0;
     display: inline-block;
     position: absolute;
     float: left;
-    border-radius: 15px;
-    z-index: 2;
+    border-radius: 10px;
+    z-index: 2;*/
 }
 .sun-hours__night-bar__now-bar__fill {
     width: 100%;
     height: 100%;
-    border-radius: 15px;
-    opacity: 0.2;
-    background-color: #ffffff;
+    border-radius: 10px;
+    background-color: var(--color-on-dark-light);
 
 }
 .sun-hours__night-bar__day-bar {
@@ -119,7 +130,7 @@
     display: inline-block;
     position: absolute;
     float: left;
-    background-color: var(--color-primary);
+    background-color: var(--color-light);
 }
 .sun-hours__container-lines {
     height: 10px;
@@ -136,13 +147,12 @@
     border-right: 1px var(--color-on-background) dotted;
     border-left: 1px var(--color-on-background) dotted;
 }
-/*
-.c-sun-hours .sunhours-container-lines .now-line {
+
+.sun-hours__container-lines__now-line {
     height: 50%;
     
     width: 1px;
     display: inline-block;
-    
     
     border-right: 2px #051d27 solid;
     position: absolute;
@@ -154,7 +164,7 @@
     border-right: 3px solid transparent;
     border-top: 8px solid #051d27;
 }
-*/
+
 .moon-icon {
     padding: 4px;
     display: inline-block;
@@ -171,6 +181,7 @@
 .sun-hours__info {
     font-family: var(--font-secondary);
     color: var(--color-on-background);
+    text-shadow: var(--color-on-background-shadow) 1px 1px 4px;
     font-size: 18px;
     text-align: center;
     padding: 16px 0;
