--- a/static/css/layouts.css
+++ b/static/css/layouts.css
@@ -1,6 +1,11 @@
 
 .l-welcome {
     padding: 5%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .l-next-weeks {
     position: relative;
@@ -18,10 +23,12 @@
 .l-next-weeks header .l-next-weeks__title {
     font-size: 26px;
     color: var(--color-on-background);
+    text-shadow: var(--color-on-background-shadow) 1px 1px 6px;
 }
 .l-next-weeks header .l-next-weeks__next-holiday {
     position: relative;
     color: var(--color-on-background);
+    text-shadow: var(--color-on-background-shadow) 1px 1px 6px;
     font-size: 16px;
 }
 .l-next-weeks header .l-next-weeks__next-holiday .l-next-weeks__next-holiday__days {
@@ -55,7 +62,8 @@
     padding: 0;
     font-family: var(--font-main);
     font-size: 40px;
-    color: #E0E0E0;
+    color: var(--color-on-background);
+    text-shadow: var(--color-on-background-shadow) 1px 1px 6px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -97,6 +105,7 @@
     font-size: 13px;
     font-weight: bold;
     color: var(--color-on-background);
+    text-shadow: var(--color-on-background-shadow) 1px 1px 3px;
     opacity: 0.7;
     display: inline-flex;
     align-items: center;
@@ -116,24 +125,30 @@
     margin-right: 5px;
     height: 100%;
     font-size: 10px;
-    color: white;
+    color: var(--color-on-secondary);
     font-family: var(--font-secondary);
     background-color: var(--color-secondary);
     border-radius: 4px;
     float: left;
 }
 .l-next-weeks__day-row__month {
-    width: 80px;
+    width: 200px;
     height: 100%;
-    font-size: 10px;
+    font-size: 15px;
     opacity: 1;
-    color: var(--color-dark);
-    font-weight: bold;
+    position: relative;
+    color: var(--color-tertiary);
+    text-shadow: var(--color-tertiary-shadow) 1px 1px 2px;
+    
+    font-weight: 500;
     font-family: var(--font-main);
-    display: inline-flex;
-    align-items: center;
-    justify-content: flex-end;
+    text-align: right;
+    margin-top: -10px;
     float: right;
+    /*text-shadow: 1px 1px 1px var(--color-light);*/
+    /*display: inline-flex;
+    align-items: flex-end;
+    justify-content: flex-end;*/
 }
 
 .l-next-weeks__day-row--past-day {
@@ -147,13 +162,13 @@
 .l-next-weeks__day-row--last-month-day {
     /*border-bottom-right-radius: 5px;*/
     /*border-bottom-left-radius: 5px;*/
-    /*border-bottom: 1px dashed var(--color-on-background);*/
+    border-bottom: 1px dashed var(--color-on-background);
     /*margin-bottom: 8px;*/
 }
 
 .l-next-weeks__day-row--first-month-day {
     border-top: none;
-    background: linear-gradient(180deg, rgba(58, 58, 58, 0.2) 0%, rgba(255,255,255,0) 85%);
-    /*border-top-left-radius: 5px;*/
+    /*background: linear-gradient(180deg, rgba(58, 58, 58, 0.2) 0%, rgba(255,255,255,0) 85%);
+    border-top-left-radius: 5px;*/
     /*border-top-right-radius: 5px;*/
 }
