--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,6 +139,7 @@ body, html {
 }
 #app > footer .container-space-bar{
     display: inline-block;
+    color: var(--color-on-background);
     font-family: var(--font-main);
     font-size: 12px;
     display: none;
@@ -149,6 +150,7 @@ body, html {
     padding: 5px 8px;
     margin: 0 5px;
     border: 1px solid grey;
+    color: rgb(31, 31, 31);
     border-radius: 5px;
     background-color: honeydew;
     box-shadow: 0 2px rgb(80, 80, 80);
