--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,7 @@
 :root {
 
     --background-image: url('');
+    --background-image-small: url('');
     --color-background: #fafce0;
     --color-surface: #edf0be;
     --color-on-background: #202020;
@@ -88,13 +89,38 @@
 body, html {
     padding: 0;
     margin: 0;
+    
+}
+body {
     background: var(--color-background);
-    background-image: var(--background-image);
+    background-image: var(--background-image-small);
     background-size: cover;
     background-position: center bottom;
     background-attachment: fixed;
     overflow: hidden;
 }
+.full-background::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background-image: var(--background-image);
+    background-size: cover;
+    background-position: center bottom;
+    background-attachment: fixed;
+    overflow: hidden;
+    animation: sharpen 0.5s ease-out;
+}
+
+@keyframes sharpen {
+    from {
+        filter: blur(30px);
+    }
+    to {
+        filter: blur(0px);
+    }
+}
+
 .main {
     padding: 0;
     position: absolute;
