--- a/static/css/style.css
+++ b/static/css/style.css
@@ -193,6 +193,27 @@ body {
     100% { opacity: 0;}
 }
 
+.container-photoby{
+    display: none;
+    position: absolute;
+    color: var(--color-on-background);
+    padding: 16px;
+    bottom: 0;
+    left: 0;
+    z-index: 3;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-family: var(--font-secondary);
+    font-size: 12px;
+    opacity: 0.4;
+}
+.container-photoby a{
+    text-decoration: underline;
+    color: var(--color-on-background);
+}
+
+
 
 .container-settings-btn{
     position: absolute;
@@ -224,6 +245,22 @@ body {
 
 
 /* ----- WIDGETS ---- */
+@keyframes popup {
+    0%{
+      transform: scale(0.8);
+      opacity: 0;
+    }
+    100%{
+      transform: scale(1);
+      opacity: 1;
+    }
+}
+
+
+.popup {
+    animation: popup 0.1s ease-in;
+}
+
 .modal-settings {
     display: none;
     position: absolute;
@@ -241,18 +278,26 @@ body {
     border-radius: 10px;
     box-shadow: 0 5px 10px grey;
 }
+.modal-settings__btn-close {
+    cursor: pointer;
+    opacity: 0.7;
+}
+.modal-settings__btn-close:hover {
+    cursor: pointer;
+    opacity: 1;
+}
 .modal-settings header {
     margin-bottom: 16px;
     overflow: hidden;
 }
 .modal-settings footer {
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 .modal-settings section {
     margin-bottom: 26px;
 }
 .modal-settings__row {
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 .modal-settings_title {
     display: flex;
@@ -274,6 +319,7 @@ body {
     border-bottom: 1px solid grey;
 }
 .modal-settings__language__flag {
+    cursor: pointer;
     width: 35px;
     padding: 4px;
     margin: 4px;
@@ -288,6 +334,7 @@ body {
     background-color: lightgrey;
 }
 .modal-settings__theme-container {
+    
     display: inline-block;
     width: 100px;
     height: 80px;
@@ -296,6 +343,7 @@ body {
     border-radius: 8px;
 }
 .modal-settings__theme {
+    cursor: pointer;
     width: 100%;
     height: 100%;
     display: flex;
@@ -305,6 +353,7 @@ body {
     background-color: khaki;
     border-radius: 8px;
     font-family: var(--font-main);
+    font-size: 13px;
     color: white;
     text-shadow: black 1px 1px 2px;
 }
@@ -312,3 +361,28 @@ body {
     background-color: lightgrey;
 }
 
+
+.primary-button {
+    font-family: var(--font-main);
+    font-size: 13px;
+    text-transform: uppercase;
+    border-radius: 4px;
+    border: none;
+    padding: 0 16px;
+    height: 36px;
+    letter-spacing: .0892857143em;
+    font-weight: 500;
+    background-color: var(--color-primary);
+    color: var(--color-on-primary);
+    cursor: pointer;
+    
+}
+
+.primary-button:hover {
+    opacity: 0.9;
+    box-shadow: 0px 2px 3px 0px grey;
+}
+.primary-button:active {
+    opacity: 0.8;
+    box-shadow: 0px 2px 3px 0px grey;
+}
