--- a/static/css/layouts.css
+++ b/static/css/layouts.css
@@ -13,29 +13,34 @@
 .l-next-weeks header {
     position: absolute;
     width: 100%;
+    height: 110px;
     top:0;
-    padding: 32px 5%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    padding: auto 5%;
+    display: inline-flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center; 
+    font-size: 18px;
     font-family: var(--font-main);
+    color: var(--color-on-background);
+    text-shadow: var(--color-on-background-shadow) 1px 1px 6px;
 }
 .l-next-weeks header .l-next-weeks__title {
     font-size: 26px;
+    text-align: right;
     color: var(--color-on-background);
     text-shadow: var(--color-on-background-shadow) 1px 1px 6px;
 }
 .l-next-weeks header .l-next-weeks__next-holiday {
     position: relative;
+    text-align: left;
     color: var(--color-on-background);
     text-shadow: var(--color-on-background-shadow) 1px 1px 6px;
     font-size: 16px;
 }
-.l-next-weeks header .l-next-weeks__next-holiday .l-next-weeks__next-holiday__days {
-    font-size: 18px;
-    color: var(--color-primary);
-}
-.l-next-weeks header .l-next-weeks__title .l-next-weeks__title--color {
+.l-next-weeks header .l-next-weeks__header--color {
+    font-size: 22px;
+    padding: 0 6px;
     color: var(--color-primary);
 }
 
@@ -46,15 +51,15 @@
 }
 .l-next-weeks .l-next-weeks__column-1 {
     width: 35%;
-    padding: 94px 20px 64px 0;
+    padding: 110px 20px 64px 0;
 }
 .l-next-weeks .l-next-weeks__column-2 {
     width: 35%;
-    padding: 94px 0 64px 20px;
+    padding: 110px 0 64px 20px;
 }
 .l-next-weeks .l-next-weeks__column-3 {
     width: 30%;
-    padding: 94px 0 64px 0;
+    padding: 110px 0 64px 0;
 }
 
 .l-next-weeks nav {
@@ -83,11 +88,19 @@
 
 .l-next-weeks .l-next-weeks__day-row {
     width: 100%;
-    border-top: 1px dotted var(--color-surface);
-    border-bottom:none;
+    border-top:none;
+    border-bottom:1px dotted var(--color-surface);
     padding: 0 4px 0 8px;
     font-family: var(--font-main);
+    cursor: pointer;
+    transition: 0.1s;
 }
+.l-next-weeks .l-next-weeks__day-row:hover {
+    /*background-color: rgba(255, 255, 255, 0.726);*/
+    border-bottom:1px solid var(--color-on-background);
+}
+
+
 .l-next-weeks__day-row__weekday {
     width: 10px;
     color: var(--color-on-background);
@@ -131,24 +144,28 @@
     border-radius: 4px;
     float: left;
 }
+.l-next-weeks__day-row__content .description:hover {
+    font-weight: bold;
+}
+
 .l-next-weeks__day-row__month {
     width: 200px;
     height: 100%;
-    font-size: 15px;
-    opacity: 1;
-    position: relative;
+    font-size: 12px;
+    opacity: 0.8;
+    /*position: relative;*/
     color: var(--color-tertiary);
     text-shadow: var(--color-tertiary-shadow) 1px 1px 2px;
     
     font-weight: 500;
     font-family: var(--font-main);
     text-align: right;
-    margin-top: -10px;
+    /*margin-top: -10px;*/
     float: right;
     /*text-shadow: 1px 1px 1px var(--color-light);*/
-    /*display: inline-flex;
-    align-items: flex-end;
-    justify-content: flex-end;*/
+    display: inline-flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .l-next-weeks__day-row--past-day {
@@ -174,18 +191,18 @@
 }
 
 .modal-event {
-    position: absolute;
+    /*position: absolute;
     width: 500px;
     height: 250px;
     top:50%;
     left:50%;
     padding: 32px;
-    margin-left:-250px;   /* negative half of width above */
+    margin-left:-250px;    negative half of width above 
     margin-top:-125px;
     z-index: 10;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 5px 10px grey;
+    box-shadow: 0 5px 10px grey;*/
 }
 .modal-event header {
     margin-bottom: 16px;
@@ -227,11 +244,14 @@
 }
 .modal-event__description {
     font-size: 22px;
+    border:none;
+    border-bottom: 1px solid;
     height: 40px;
     width: 100%;
     padding: 4px 8px;
     font-family: var(--font-main);
     margin: 4px 0 0 0;
+    outline: none;
 }
 .modal-event__checkbox-holiday {
     height: 40px;
