--- a/static/css/style.css
+++ b/static/css/style.css
@@ -261,8 +261,38 @@ body {
     animation: popup 0.1s ease-in;
 }
 
+
+#modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 99; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+  
+
+.modal-content {
+    background-color: #fefefe;
+    border-radius: 10px;
+    margin: auto;
+    padding: 36px;
+    border: 1px solid #888;
+    width: 50%;
+}
+
+
+
+
+
+
 .modal-settings {
-    display: none;
+    /*display: none;
     position: absolute;
     width: 700px;
     height: 400px;
@@ -271,12 +301,12 @@ body {
     padding: 32px;
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-left:-350px;   /* negative half of width above */
+    margin-left:-350px;    negative half of width above 
     margin-top:-200px;
     z-index: 10;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0 5px 10px grey;
+    box-shadow: 0 5px 10px grey;*/
 }
 .modal-settings__btn-close {
     cursor: pointer;
@@ -291,13 +321,13 @@ body {
     overflow: hidden;
 }
 .modal-settings footer {
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 .modal-settings section {
     margin-bottom: 26px;
 }
 .modal-settings__row {
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 .modal-settings_title {
     display: flex;
