blur background in layouts

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,10 @@ body {
     overflow: hidden;
     animation: sharpen 0.3s ease-out;
 }
+.blur::before {
+    filter: blur(30px);
+    animation: blur 0.3s ease-in;
+}
 
 @keyframes sharpen {
     from {
@@ -123,6 +127,15 @@ body {
     }
     to {
         filter: blur(0px);
+    }
+}
+
+@keyframes blur {
+    from {
+        filter: blur(0px);
+    }
+    to {
+        filter: blur(30px);
     }
 }
 
