🚀 adding basic structure

--- a/timetab/src/css/Clock.css
+++ b/timetab/src/css/Clock.css
@@ -1,3 +1,13 @@
 .clock {
-    color:blue;
+    /*margin: 0 auto 30px auto;*/
+    width: 100%;
+    font-family: var(--font-main);
+    font-weight: 400;
+    font-size: 90px;
+    text-shadow: var(--color-on-background-shadow) 1px 1px 4px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    color: var(--color-on-background);
 }
