themes and sunhour component

--- a/timetab/src/css/App.css
+++ b/timetab/src/css/App.css
@@ -7,3 +7,19 @@ footer {
   padding: 16px;
   text-align: center;
 }
+
+.main {
+  padding: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.welcome {
+    padding: 5%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
