--- a/timetab/src/css/App.css
+++ b/timetab/src/css/App.css
@@ -1,13 +1,3 @@
-
-footer {
-  padding: 0;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  padding: 16px;
-  text-align: center;
-}
-
 .main {
   padding: 0;
   position: absolute;
@@ -22,4 +12,42 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+/* Footer */
+
+footer {
+  padding: 0;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  padding: 12px 16px;
+  text-align: center;
+}
+
+.photoby {
+  color: var(--color-on-background);
+  font-family: var(--font-secondary);
+  font-size: 12px;
+  opacity: 0.4;
+  text-align: left;
+  display: flex;
+  align-items: center;
+}
+.photoby a {
+  text-decoration: underline;
+  color: var(--color-on-background);
+}
+
+.settings-button {
+  color: var(--color-on-background);
+  text-align: right;
+}
+.settings-button .settings-button__btn {
+  opacity: 0.4;
+  cursor: pointer;
+}
+.settings-button .settings-button__btn:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
