--- a/timetab/src/css/SunHours.css
+++ b/timetab/src/css/SunHours.css
@@ -52,8 +52,7 @@
     border-top: 1px solid var(--color-on-dark-light);
     background: var(--color-on-dark-light);
     transform: translateY(-50%);
-    z-index: 2;
-    /*
+    /*z-index: 1;
     height: 100%;
     padding: 5% 0;
     top: 0;
